--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:textColor="@color/primaryColor"
         android:textSize="42dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnConnexion"
+        app:layout_constraintBottom_toTopOf="@+id/btnGoToConnection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sentenceLink"
@@ -37,17 +37,17 @@
         app:srcCompat="@drawable/logo" />
 
     <Button
-        android:id="@+id/btnConnexion"
+        android:id="@+id/btnGoToConnection"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginTop="420dp"
         android:backgroundTint="@color/primaryColor"
-        android:onClick="onClickConnexion"
-        android:text="@string/connexion"
+        android:onClick="clickOnConnexion"
+        android:text="@string/connection"
         android:textColor="#000000"
         android:textSize="16dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnsignUp"
+        app:layout_constraintBottom_toTopOf="@+id/btnGoToSignUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,12 +55,12 @@
         app:layout_constraintVertical_bias="0.093" />
 
     <Button
-        android:id="@+id/btnsignUp"
+        android:id="@+id/btnGoToSignUp"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginBottom="176dp"
         android:backgroundTint="@color/primaryColor"
-        android:onClick="onClickCreateAccount"
+        android:onClick="clickOnCreateAccount"
         android:text="@string/sign_up"
         android:textColor="#000000"
         android:textSize="16dp"
@@ -90,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:text="@string/sentenceLink"
+        android:text="@string/sentence_link"
         android:textColor="@color/white"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -113,6 +113,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnsignUp"
+        app:layout_constraintTop_toBottomOf="@+id/btnGoToSignUp"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
