--- a/app/src/main/res/layout/activity_my_todo_local.xml
+++ b/app/src/main/res/layout/activity_my_todo_local.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".View.MyTodoLocalActivity">
 
+    <Button
+        android:id="@+id/deco"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:onClick="clickOnLogout"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
