--- a/app/src/main/res/layout/local_task.xml
+++ b/app/src/main/res/layout/local_task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,10 +11,18 @@
 
         <CheckBox
             android:id="@+id/checkBoxTask"
-            android:layout_width="wrap_content"
+            android:layout_width="401dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="CheckBox" />
+
+        <ImageButton
+            android:id="@+id/localTaskOptions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/white_option_points" />
 
     </LinearLayout>
 
