--- a/app/src/main/res/layout/activity_my_local_todo.xml
+++ b/app/src/main/res/layout/activity_my_local_todo.xml
@@ -42,6 +42,21 @@
                 android:layout_height="wrap_content"
                 android:onClick="clickOnLogout"
                 android:text="@string/logout" />
+
+            <Button
+                android:id="@+id/shared"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="clickOnGoToSharedTodo"
+                android:text="@string/share" />
+
+            <Button
+                android:id="@+id/sharedWithMe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/titleSharedTodoWithMe" />
         </LinearLayout>
 
         <RelativeLayout
