--- a/app/src/main/res/layout/activity_my_local_todo.xml
+++ b/app/src/main/res/layout/activity_my_local_todo.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/titleLocalTodoActivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/titleLocalTodoActivity" />
+                android:text="@string/titleLocalTodo" />
         </RelativeLayout>
 
         <LinearLayout
