--- a/app/src/main/res/layout/activity_my_local_todo.xml
+++ b/app/src/main/res/layout/activity_my_local_todo.xml
@@ -56,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="clickOnGoToSharedWithMe"
                 android:text="@string/titleSharedTodoWithMe" />
         </LinearLayout>
 
@@ -63,7 +64,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- Modifier la position du FloatingActionButton -->
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btnGoToAddLocalTodo"
                 android:layout_width="wrap_content"
