--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,7 @@
         android:textColor="#000000"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:onClick="clickOnLeave"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
