--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,113 +7,91 @@
     android:background="@color/backgroundColor"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/appName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/app_name"
-        android:textColor="@color/primaryColor"
-        android:textSize="42dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnGoToConnection"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sentenceLink"
-        app:layout_constraintVertical_bias="0.0" />
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="149dp"
-        android:layout_height="152dp"
-        android:layout_marginStart="161dp"
-        android:layout_marginEnd="140dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.769"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043"
-        app:srcCompat="@drawable/logo" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="149dp"
+            android:layout_height="152dp"
+            android:layout_marginTop="16dp"
+            app:srcCompat="@drawable/logo" />
 
-    <Button
-        android:id="@+id/btnGoToConnection"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="420dp"
-        android:backgroundTint="@color/primaryColor"
-        android:onClick="clickOnConnexion"
-        android:text="@string/connection"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnGoToSignUp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.093" />
+        <TextView
+            android:id="@+id/welcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/welcome"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:gravity="center" />
 
-    <Button
-        android:id="@+id/btnGoToSignUp"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_marginBottom="176dp"
-        android:backgroundTint="@color/primaryColor"
-        android:onClick="clickOnCreateAccount"
-        android:text="@string/sign_up"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/sentenceLink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/sentence_link"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="36dp"
-        android:text="@string/welcome"
-        android:textColor="@color/white"
-        android:textSize="38dp"
-        app:layout_constraintBottom_toTopOf="@+id/sentenceLink"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        <TextView
+            android:id="@+id/appName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/app_name"
+            android:textColor="@color/primaryColor"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/sentenceLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:text="@string/sentence_link"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.042" />
+        <Button
+            android:id="@+id/btnGoToConnection"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="32dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/primaryColor"
+            android:onClick="clickOnConnexion"
+            android:text="@string/connection"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnExit"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="@color/primaryColor"
-        android:text="@string/exit"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:onClick="clickOnLeave"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoToSignUp"
-        app:layout_constraintVertical_bias="0.0" />
+        <Button
+            android:id="@+id/btnGoToSignUp"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/primaryColor"
+            android:onClick="clickOnCreateAccount"
+            android:text="@string/sign_up"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnExit"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/primaryColor"
+            android:onClick="clickOnLeave"
+            android:text="@string/exit"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
