--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -27,7 +27,9 @@
                 android:id="@+id/shareSentence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="Share"
+                android:paddingLeft="25dp"
+                android:paddingTop="15dp"/>
 
         </RelativeLayout>
 
@@ -40,14 +42,16 @@
                 android:id="@+id/shareMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/white"/>
 
             <EditText
                 android:id="@+id/shareMailInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/btnShare"
