--- a/app/src/main/res/layout/activity_upd_local_task.xml
+++ b/app/src/main/res/layout/activity_upd_local_task.xml
@@ -27,7 +27,8 @@
                 android:id="@+id/chooseSentence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="Update"
+                android:textColor="@color/black"/>
 
         </RelativeLayout>
 
@@ -40,14 +41,16 @@
                 android:id="@+id/chooseTitleLocalTask"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/white"/>
 
             <EditText
                 android:id="@+id/localTaskTitleInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/btnUpdLocalTask"
