--- a/app/src/main/res/layout/activity_upd_local_todo.xml
+++ b/app/src/main/res/layout/activity_upd_local_todo.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/chooseSentence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="Update" />
 
         </RelativeLayout>
 
@@ -40,14 +40,16 @@
                 android:id="@+id/chooseTitleLocalTodo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/white"/>
 
             <EditText
                 android:id="@+id/localTodoTitleInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/btnUpdLocalTodo"
