--- a/app/src/main/res/layout/local_task_item.xml
+++ b/app/src/main/res/layout/local_task_item.xml
@@ -14,7 +14,8 @@
             android:layout_width="401dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="CheckBox" />
+            android:text="CheckBox"
+            android:textColor="@color/white"/>
 
         <ImageButton
             android:id="@+id/localTaskOptions"
