--- a/app/src/main/res/layout/local_todolist_item.xml
+++ b/app/src/main/res/layout/local_todolist_item.xml
@@ -13,7 +13,8 @@
             android:layout_width="241dp"
             android:layout_height="57dp"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/black"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
