--- a/app/src/main/res/layout/activity_my_local_todo.xml
+++ b/app/src/main/res/layout/activity_my_local_todo.xml
@@ -27,6 +27,8 @@
             <TextView
                 android:id="@+id/titleLocalTodoActivity"
                 android:layout_width="match_parent"
+                android:layout_centerVertical="true"
+                android:textColor="@color/backgroundColor"
                 android:layout_height="wrap_content"
                 android:text="@string/titleLocalTodo" />
         </RelativeLayout>
